src/main/java/com/example/Demo/errors/exception/EmailTakenException.java
package com.example.Demo.errors.exception;

public class EmailTakenException extends RuntimeException {
    public EmailTakenException(String message) {
        super(message);
    }
}
